jenkins/setup/security_group.tf
resource "aws_security_group" "jenkins-securitygroup" {
  vpc_id      = "${aws_vpc.main.id}"
  name        = "jenkins-securitygroup"
  description = "security group that allows ssh and all egress traffic"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
    Name = "jenkins-securitygroup"
  }
}
